--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-tensorflow>=2.12.0
-keras>=2.12.0
-numpy>=1.23.0
-pandas>=1.5.0
-matplotlib>=3.6.0
-seaborn>=0.12.0
-nltk>=3.8.0
-scikit-learn>=1.2.0
-kagglehub>=0.2.5
+tensorflow
+keras
+numpy
+pandas
+matplotlib
+seaborn
+nltk
+scikit-learn
+kagglehub
 streamlit
+
