--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,218 @@
-streamlit
-scikit-learn
-pandas
-numpy
-nltk
-joblib
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+alembic==1.15.2
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+asttokens==3.0.0
+attrs==24.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+biosppy==2.2.3
+bleach==6.2.0
+blinker==1.8.2
+bs4==0.0.2
+cachetools==5.5.0
+catboost==1.2.8
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpickle==3.1.1
+cmake==3.30.4
+colorama==0.4.6
+comm==0.2.3
+comtypes==1.4.6
+contourpy==1.3.0
+cryptography==43.0.1
+cycler==0.12.1
+databricks-sdk==0.52.0
+datasets==4.1.1
+debugpy==1.8.16
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.4.0
+display==1.0.0
+distro==1.9.0
+Django==5.1.2
+docker==7.1.0
+docstring_parser==0.16
+docx==0.2.4
+et-xmlfile==1.1.0
+evaluate==0.4.6
+executing==2.2.1
+fastapi==0.115.2
+fastjsonschema==2.21.1
+filelock==3.19.1
+Flask==3.0.3
+fonttools==4.53.1
+frozenlist==1.7.0
+fsspec==2025.9.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.25.1
+google-auth==2.40.1
+google-cloud-aiplatform==1.104.0
+google-cloud-bigquery==3.35.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-genai==1.26.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+graphviz==0.21
+greenlet==3.2.2
+grpc-google-iam-v1==0.14.2
+grpcio==1.73.1
+grpcio-status==1.73.1
+h11==0.16.0
+h5py==3.13.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.35.3
+idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
+importlib_metadata==8.6.1
+ipykernel==6.30.1
+ipython==9.5.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.11.0
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+jwt==1.3.1
+kiwisolver==1.4.7
+lightgbm==4.6.0
+lxml==5.4.0
+Mako==1.3.10
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.1
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.2
+mlflow==2.22.0
+mlflow-skinny==2.22.0
+mock==5.2.0
+mpmath==1.3.0
+multidict==6.6.4
+multiprocess==0.70.16
+mysql-connector==2.2.9
+mysql-connector-python==9.3.0
+narwhals==2.5.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+neurokit2==0.2.10
+nltk==3.9.1
+numpy==2.1.0
+openai==2.2.0
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+opentelemetry-api==1.33.0
+opentelemetry-sdk==1.33.0
+opentelemetry-semantic-conventions==0.54b0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.5
+PeakUtils==1.3.5
+pillow==10.4.0
+platformdirs==4.3.6
+plotly==6.3.0
+prettytable==3.11.0
+prompt_toolkit==3.0.52
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.0.0
+pure_eval==0.2.3
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+pygame==2.6.1
+Pygments==2.18.0
+PyMySQL==1.1.1
+pyparsing==3.1.4
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+pyttsx3==2.88
+pytz==2024.2
+PyWavelets==1.8.0
+pywin32==308
+PyYAML==6.0.2
+pyzmq==26.2.1
+rdkit==2025.3.6
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.6.1
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==75.1.0
+shapely==2.1.1
+shortuuid==1.0.13
+six==1.16.0
+sklearn-compat==0.1.3
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.40
+sqlparse==0.5.1
+stack-data==0.6.3
+starlette==0.39.2
+streamlit==1.40.1
+streamlit-option-menu==0.4.0
+sympy==1.14.0
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tokenizers==0.22.1
+toml==0.10.2
+torch==2.8.0
+tornado==6.4.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.56.2
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.34.2
+waitress==3.0.2
+watchdog==6.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websockets==15.0.1
+Werkzeug==3.0.4
+wheel==0.44.0
+wrapt==1.17.2
+xgboost==3.0.0
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.21.0
